--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
     "name": "SkiFree",
-    "version": "1.1",
+    "version": "1.2",
     "manifest_version": 2,
     "description": "SkiFree Chrome Extension. Originally by Chris Pirih on Windows. Written by Venkat Naidu in HTML5.",
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
+    },
+    "background": {
+        "page": "background.html"
     }
 }
