--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "SkiFree",
-    "version": "1.2",
+    "version": "1.4",
     "manifest_version": 2,
-    "description": "SkiFree Chrome Extension. Originally by Chris Pirih on Windows. Written by Venkat Naidu in HTML5.",
+    "description": "SkiFree Chrome Extension.",
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
