--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
     "name": "SkiFree",
-    "version": "1.4",
+    "version": "1.7",
     "manifest_version": 2,
     "description": "SkiFree Chrome Extension.",
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
+    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "background": {
         "page": "background.html"
     }
