--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 {
-    "name": "SkiFree",
-    "version": "2.0",
-    "manifest_version": 2,
-    "description": "SkiFree Chrome Extension.",
-    "browser_action": {
-        "default_icon": "icon.png",
-        "default_popup": "popup.html"
-    },
-    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+  "name": "SkiFree",
+  "description": "SkiFree Chrome App.",
+  "version": "0.1",
+  "manifest_version": 2,
+  "app": {
     "background": {
-        "page": "background.html"
+      "scripts": ["background.js"]
     }
+  },
+  "icons": { "16": "ski16.png", "128": "ski32.png" }
 }
